<resources>
    <string name="app_name">Face File Locker by ISA</string>

    <string name="action_settings">Settings</string>
    <string name="label_lock">Lock</string>
    <string name="txt_hint">Enter password</string>
    <string name="label_unlock">Unlock</string>
    <string name="icon_image">Icon</string>
    <string name="capture">Capture</string>
    <string name="exit">Exit</string>
    <string name="ok">Upload</string>
    <string name="recapture">Recapture</string>
    <string name="content_description">Preview Image</string>
    <string name="detect_face">Detect Face</string>
    <string name="snapshot">Take Picture</string>
    <string name="user_name">Designed and Coded by Isah Abduljalil with Matric No.: 13/SCI01/010</string>
    <string name="file_icon">File icon</string>
    <string name="captured_image">Captured Image</string>
</resources>
